--- a/main.css
+++ b/main.css
@@ -1,32 +1,15 @@
 body {
   margin: 0;
-  padding: 0;
   background-color: #cccccc;
   color: #333333;
   font-size: 15px;
   line-height: 2;
   position: relative; }
 
-ul {
-  margin: 0;
-  padding: 0; }
-
-a {
-  color: #3583aa;
-  textdecoration: none; }
-  a:hover {
-    text-decoration: underline; }
-  a img:hover {
-    opacity: 0.8; }
-
 header {
   width: 960px;
   height: 100px;
-  margin: 0 auto; }
-
-.logo {
-  float: left;
-  margin-top: 50px; }
+  margin: auto; }
 
 .global-nav {
   float: right;
@@ -37,55 +20,27 @@ header {
     font-size: 20px;
     list-style: none;
     font-family: 'Bitter', serif; }
-    .global-nav li a {
-      color: #ffffff; }
-      .global-nav li a:hover {
-        border-bottom: 2px solid #ffffff;
-        padding-bottom: 3px;
-        text-decoration: none; }
+
+a {
+  color: #ffffff;
+  text-decoration: none; }
+  a:hover {
+    border-bottom: 2px solid;
+    padding-bottom: 3px; }
 
 #wrap {
-  clear: both;
   background-color: #ffffff;
   margin-top: 500px;
   padding: 35px 0; }
 
 .content {
   width: 960px;
-  margin: 0 auto; }
-
-footer {
-  text-align: center;
-  color: #ffffff;
-  padding: 20px 0;
-  background-color: #767671; }
-  footer small {
-    font-size: 12px; }
-
-.btn a {
-  background-color: #009cd3;
-  color: #ffffff;
-  font-size: 20px;
-  font-family: 'Bitter', serif;
-  width: 185px;
-  display: block;
-  text-align: center;
-  line-height: 50px;
-  margin-top: 20px;
-  border-radius: 5px;
-  border: 3px solid #009cd3; }
-  .btn a:hover {
-    text-decoration: none;
-    background-color: #ffffff;
-    color: #009cd3; }
+  margin: auto; }
 
 .main {
   width: 700px;
   margin: 0 10px;
   float: left; }
-  .main-center {
-    width: 940px;
-    margin: 0 auto; }
 
 h1 {
   font-family: 'Bitter', serif;
@@ -96,11 +51,6 @@ h2 {
   font-family: 'Bitter', serif;
   font-size: 24px; }
 
-.icon:before {
-  content: "";
-  padding-right: 10px;
-  border-left: 7px solid #9cb4a4; }
-
 .clearfix:after {
   content: "";
   display: block;
@@ -109,9 +59,8 @@ h2 {
 section {
   margin-bottom: 35px; }
 
-table {
-  border-spacing: 0;
-  border-collapse: collapse; }
+img:hover {
+  opacity: 0.8; }
 
 #portfolio {
   background-image: url(9c51512420d70040e8aab73d831949b5.jpg);
@@ -129,6 +78,14 @@ table {
     margin-bottom: 10px; }
   .sidebar ul {
     font-size: 16px;
-    margin-left: 20px; }
+    padding-left: 20px; }
     .sidebar ul a {
       color: #333333; }
+
+footer {
+  text-align: center;
+  color: #ffffff;
+  padding: 20px 0;
+  background-color: #767671; }
+  footer small {
+    font-size: 12px; }
