--- a/main.scss
+++ b/main.scss
@@ -2,7 +2,6 @@
 
 body {
   margin: 0;
-  padding: 0;
   background-color: #cccccc;
   color: #333333;
   font-size: 15px;
@@ -10,35 +9,10 @@ body {
   position: relative;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: #3583aa;
-  textdecoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
-
-  img{
-    &:hover{
-      opacity: 0.8;
-    }
-  }
-}
-
 header {
   width: 960px;
   height: 100px;
-  margin: 0 auto;
-}
-
-.logo {
-  float: left;
-  margin-top: 50px;
+  margin: auto;
 }
 
 .global {
@@ -52,22 +26,20 @@ header {
       font-size: 20px;
       list-style: none;
       font-family: 'Bitter', serif;
-
-      a {
-        color: #ffffff;
-
-        &:hover {
-          border-bottom: 2px solid #ffffff;
-          padding-bottom: 3px;
-          text-decoration: none;
-        }
-      }
     }
   }
 }
 
+a {
+  color: #ffffff;
+  text-decoration: none;
+  &:hover {
+    border-bottom: 2px solid;
+    padding-bottom: 3px;
+  }
+}
+
 #wrap {
-  clear: both;
   background-color: #ffffff;
   margin-top: 500px;
   padding: 35px 0;
@@ -75,50 +47,13 @@ header {
 
 .content {
   width: 960px;
-  margin: 0 auto;
-}
-
-footer {
-  text-align: center;
-  color:#ffffff;
-  padding: 20px 0;
-  background-color: #767671;
-
-  small {
-    font-size: 12px;
-  }
-}
-
-.btn {
-  a {
-    background-color: #009cd3;
-    color: #ffffff;
-    font-size: 20px;
-    font-family: 'Bitter', serif;
-    width: 185px;
-    display: block;
-    text-align: center;
-    line-height: 50px;
-    margin-top: 20px;
-    border-radius: 5px;
-    border: 3px solid #009cd3;
-
-    &:hover {
-      text-decoration: none;
-      background-color: #ffffff;
-      color: #009cd3;
-    }
-  }
+  margin: auto;
 }
 
 .main{
   width: 700px;
   margin: 0 10px;
   float: left;
-  &-center {
-    width: 940px;
-    margin: 0 auto;
-  }
 }
 
 h1 {
@@ -130,14 +65,6 @@ h1 {
 h2 {
   font-family: 'Bitter', serif;
   font-size: 24px;
-}
-
-.icon {
-  &:before {
-    content: "";
-    padding-right: 10px;
-    border-left: 7px solid #9cb4a4;
-  }
 }
 
 .clearfix {
@@ -152,9 +79,10 @@ section {
   margin-bottom: 35px;
 }
 
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
+img{
+  &:hover{
+    opacity: 0.8;
+  }
 }
 
 #portfolio {
@@ -177,10 +105,20 @@ table {
 
   ul {
     font-size: 16px;
-    margin-left: 20px;
-
+    padding-left: 20px;
     a{
       color:#333333;
     }
+  }
+}
+
+footer {
+  text-align: center;
+  color:#ffffff;
+  padding: 20px 0;
+  background-color: #767671;
+
+  small {
+    font-size: 12px;
   }
 }
