--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   margin: 0;
   background-color: #cccccc;
@@ -6,58 +7,10 @@ body {
   line-height: 2;
   position: relative; }
 
-header {
-  width: 960px;
-  height: 100px;
-  margin: auto; }
-
-.global-nav {
-  float: right;
-  margin-top: 60px; }
-  .global-nav li {
-    float: left;
-    margin: 0 20px;
-    font-size: 20px;
-    list-style: none;
-    font-family: 'Bitter', serif; }
-
-a {
-  color: #ffffff;
-  text-decoration: none; }
-  a:hover {
-    border-bottom: 2px solid;
-    padding-bottom: 3px; }
-
-#wrap {
-  background-color: #ffffff;
-  margin-top: 500px;
-  padding: 35px 0; }
-
-.content {
-  width: 960px;
-  margin: auto; }
-
-.main {
-  width: 700px;
-  margin: 0 10px;
-  float: left; }
-
-h1 {
-  font-family: 'Bitter', serif;
-  font-size: 36px;
-  border-bottom: 1px solid #cccccc; }
-
-h2 {
-  font-family: 'Bitter', serif;
-  font-size: 24px; }
-
 .clearfix:after {
   content: "";
   display: block;
   clear: both; }
-
-section {
-  margin-bottom: 35px; }
 
 img:hover {
   opacity: 0.8; }
@@ -69,23 +22,80 @@ img:hover {
   background-attachment: fixed;
   background-size: 100% auto; }
 
-.sidebar {
-  width: 200px;
-  margin: 0 10px 0 30px;
-  float: right;
-  font-family: 'Bitter', serif; }
-  .sidebar h2 {
-    margin-bottom: 10px; }
-  .sidebar ul {
-    font-size: 16px;
-    padding-left: 20px; }
-    .sidebar ul a {
-      color: #333333; }
+/* header始まり */
+header {
+  width: 960px;
+  height: 100px;
+  margin: auto; }
+  header .global-nav {
+    float: right;
+    margin-top: 60px; }
+    header .global-nav__list {
+      float: left;
+      margin: 0 20px;
+      font-size: 20px;
+      list-style: none;
+      font-family: 'Bitter', serif; }
+      header .global-nav__list--button {
+        color: #ffffff;
+        text-decoration: none; }
+      header .global-nav__list--button:hover {
+        border-bottom: 2px solid;
+        padding-bottom: 3px; }
 
-footer {
+/* header終わり */
+/* wrap始まり */
+#wrap {
+  background-color: #ffffff;
+  margin-top: 500px;
+  padding: 35px 0; }
+  #wrap .content {
+    width: 960px;
+    margin: auto; }
+  #wrap .main {
+    width: 700px;
+    margin: 0 10px;
+    float: left; }
+    #wrap .main__title {
+      font-family: 'Bitter', serif;
+      font-size: 36px;
+      border-bottom: 1px solid #cccccc; }
+    #wrap .main__item {
+      margin-bottom: 35px; }
+      #wrap .main__item__item-title {
+        font-family: 'Bitter', serif;
+        font-size: 24px; }
+    #wrap .main__item-button {
+      color: #3583aa;
+      text-decoration: none; }
+    #wrap .main__item-button:hover {
+      border-bottom: 1px solid; }
+  #wrap .sidebar {
+    width: 200px;
+    margin: 0 10px 0 30px;
+    float: right;
+    font-family: 'Bitter', serif; }
+    #wrap .sidebar__title {
+      font-size: 24px;
+      margin-bottom: 10px; }
+    #wrap .sidebar__lists {
+      font-size: 16px;
+      margin: 0 20px;
+      padding: 0; }
+    #wrap .sidebar__lists-item {
+      color: #333333;
+      text-decoration: none; }
+    #wrap .sidebar__lists-item:hover {
+      border-bottom: 1px solid; }
+
+/* wrap終わり */
+/* site-footer始まり */
+.site-footer {
   text-align: center;
   color: #ffffff;
   padding: 20px 0;
   background-color: #767671; }
-  footer small {
+  .site-footer__comment {
     font-size: 12px; }
+
+/* site-footer終わり */
